Added client fund removal requests

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,9 @@
     by: Lucas Kaastra
     Modified:
 */
+html * {
+    font-family: Helvetica, Arial, Verdana, SansSerif;
+}
 
 .dashboardsidebar {
     border-radius: 4px;
