--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,8 +61,9 @@ body {
     top: 0;
     width: 100%; 
     z-index: 1000;
-    overflow: hidden;
 }
 .dropdown-menu{
     background: #dbdbdb;
+    z-index: 9999;
 }
+
