--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,5 +70,11 @@ body {
     background: #e9e9e9;
     border-bottom: .5px solid #C6C6C6;
 }
+a.nav-link {
+    padding-top: 1px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 1px;
+}
 
 
